test/classes/errors/nilability-init-var/init-var-nonnil-unmanaged-from-oknil-owned.good
init-var-nonnil-unmanaged-from-oknil-owned.chpl:9: error: cannot initialize variable 'lhs' of non-nilable type 'unmanaged MyClass' from a nilable 'owned MyClass?'
